Added Anchor Tag

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 						<p>We have invested lots of time and effort into making sourcing vehicles easeir and more efficient for our customers. We have multiple products available to our customers to aid in the process.</p>
 						<br>
 						<p><small><b>find out who helps make this happen</b></small></p>
-						<img src="images/down-arrow.png" >
+						<a href="#"><img src="images/down-arrow.png" ></a>
 					
 				</section>
 
