Removed background shadow on img:hover

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 						<p>We have invested lots of time and effort into making sourcing vehicles easeir and more efficient for our customers. We have multiple products available to our customers to aid in the process.</p>
 						<br>
 						<p><small><b>find out who helps make this happen</b></small></p>
-						<a href="#"><img src="images/down-arrow.png" ></a>
+						<a href="index.html#/3/1" class="navigate-down"><img src="images/down-arrow.png" ></a>
 					
 				</section>
 
@@ -100,6 +100,8 @@
 						<img style="" class="no-img-style" src="images/Infrastructure.png"> 
 						<img style="" class="no-img-style" src="images/Valuations.png">
 						<span class="location">5TH MCR</span>
+						<br>
+						<p class="links"><a href="index.html#/4" class="navigate-right"><small>back to the story</small></a></p>
 					</section>
 
 				</section>
@@ -110,39 +112,43 @@
 					<p>Did you know vehicle is listed <i>every 60 seconds</i> on our site? With over <b>11 million visitors</b> every month, we are an integral part of the vehicle buying & selling process.</p>
 					<br>
 						<p><small><b>Lets see who enables our customers to list their vehicles</b></small></p>
-						<img src="images/down-arrow.png" >
+						<a href="index.html#/4/1" class="navigate-down"><img src="images/down-arrow.png" ></a>
 					</section>
 
 					<section>
 					<h3>Stock</h3>
-					<p>Did you know vehicle is listed every 60 seconds on our site?</p>
+					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
 					</section>
 
 					<section>
 					<h3>Valuations</h3>
-					<p>Did you know vehicle is listed every 60 seconds on our site?</p>
+					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+					<p class="links"><a href="index.html#/4" class="navigate-right"><small>back to the story</small></a></p>
 					</section>
 				</section>
 
 				<section>
 					<section>
-					<h2><b>Customer</b> Manages Listing</h2>
-					<p>Did you know vehicle is listed every 60 seconds on our site? </p>
+					<h2>Another Step...</h2>
+					<p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+					<br>
+					<p><small><b>Who is involved in this step</b></small></p>
+						<a href="#" class="navigate-down"><img src="images/down-arrow.png" ></a>
 					</section>
 
 					<section>
-					<h3>DSS</h3>
-					<p>Did you know vehicle is listed every 60 seconds on our site?</p>
+					<h3>Squad</h3>
+					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
 					</section>
 
 					<section>
-					<h3>Search</h3>
-					<p>Did you know vehicle is listed every 60 seconds on our site?</p>
+					<h3>Squad</h3>
+					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
 					</section>
 
 					<section>
-					<h3>RMS</h3>
-					<p>Did you know vehicle is listed every 60 seconds on our site?</p>
+					<h3>Squad</h3>
+					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
 					</section>
 
 				</section>
@@ -150,19 +156,28 @@
 
 				<section>
 					<section>
-					<h2><b>Consumer</b> Finds A Vehicle</h2>
-					<p>Did you know vehicle is listed every 60 seconds on our site? </p>
+					<h2>Another Step...</h2>
+					<p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+					<br>
+					<p><small><b>Who is involved in this step</b></small></p>
+						<a href="#" class="navigate-down"><img src="images/down-arrow.png" ></a>
 					</section>
 
 					<section>
-					<h3>Stock</h3>
-					<p>Did you know vehicle is listed every 60 seconds on our site?</p>
+					<h3>Squad</h3>
+					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
 					</section>
 
 					<section>
-					<h3>Valuations</h3>
-					<p>Did you know vehicle is listed every 60 seconds on our site?</p>
+					<h3>Squad</h3>
+					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
 					</section>
+
+					<section>
+					<h3>Squad</h3>
+					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+					</section>
+
 				</section>
 
 
