nick-b fixes typos

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
 				<section>
 						<h2>Where does it go next?</h2>
-						<p>The vehicle can be sold straight to the consumer or make its way to a retailers forecourt.</p>
+						<p>The vehicle can be sold straight to the consumer or make its way to a retailer's forecourt.</p>
 				</section>
 
 
@@ -66,7 +66,7 @@
 
 				<section>
 						<h2>Customer acquires a vehicle </h2>
-						<p>We have invested lots of time and effort into making sourcing vehicles easeir and more efficient for our customers. We have multiple products available to our customers to aid in the process.</p>
+						<p>We have invested lots of time and effort into making sourcing vehicles easier and more efficient for our customers. We have multiple products available to our customers to aid in the process.</p>
 						<br>
 						<p><small><b>find out who helps make this happen</b></small></p>
 						<a href="index.html#/3/1" class="navigate-down"><img src="images/down-arrow.png" ></a>
@@ -74,19 +74,19 @@
 				</section>
 
 					<section>
-						<h3>AutoTrade-Mail</h3>
-						<p>Dealer to Dealer platform created by dealers for dealers that allows them trade vehicles at low prices.</p>
+						<h3>AutoTrade-Mail (ATM)</h3>
+						<p>Dealer to dealer platform created by dealers for dealers that allows them trade vehicles at trade prices.</p>
 						<br>
-						<p class="links"><small>ATM links closly with...</small></p>
+						<p class="links"><small>ATM links closely with...</small></p>
 						<img style="" class="no-img-style" src="images/Valuations.png">
 						<img style="" class="no-img-style" src="images/Infrastructure.png"> <img style="" class="no-img-style" src="images/Valuations.png">
 						<span class="location">4TH MCR</span>
 					</section>
 
 					<section>
-						<h3>I-Control</h3>
-						<p>There is a reason we class ourselves as a data company above anything else. I-Control utilises this data to allow our dealers to buy the right stock and sell it at the right price to maximise profits.</p>
-						<p class="links"><small>I-Control links closly with...</small></p>
+						<h3>i-Control</h3>
+						<p>There is a reason we class ourselves as a data company above anything else. i-Control utilises this data to allow our dealers to buy the right stock and sell it at the right price to maximise profits.</p>
+						<p class="links"><small>i-Control links closely with...</small></p>
 						<img style="" class="no-img-style" src="images/Valuations.png">
 						<img style="" class="no-img-style" src="images/Infrastructure.png"> <img style="" class="no-img-style" src="images/Valuations.png">
 						<span class="location">5TH MCR</span>
@@ -95,7 +95,7 @@
 					<section>
 						<h2>Part Exchange</h2>
 						<p>A great tool allowing you to compare stock in the market against vehicles on AutoTrader, with similar cars advertised available to view in an instant.</p>
-						<p class="links"><small>Part Exchange links closly with...</small></p>
+						<p class="links"><small>Part Exchange links closely with...</small></p>
 						<img style="" class="no-img-style" src="images/Valuations.png">
 						<img style="" class="no-img-style" src="images/Infrastructure.png"> 
 						<img style="" class="no-img-style" src="images/Valuations.png">
