--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 
 		<title>FY16 Grad Wall</title>
 
-		<meta name="description" content="A framework for easily creating beautiful presentations using HTML">
-		<meta name="author" content="Hakim El Hattab">
+		<meta name="description" content="A wall for people">
+		<meta name="author" content="FY16 Grads">
 
 		<meta name="apple-mobile-web-app-capable" content="yes" />
 		<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
@@ -42,20 +42,21 @@
 			<!-- Any section element inside of this container is displayed as a slide -->
 			<div class="slides">
 
-				<section>
-					<img src="images/logo.png" class="no-img-style">
+				<section data-background="#ffffff">
+
+					<img src="images/logo.png" class="no-img-style" onclick=Reveal.toggleOverview(true)>
 					<h4>who we are and what we do</h4>
 				</section>
 
 
-				<section>
+				<section data-background="#ffffff">
 					<h2>Lets start with the vehicle</h2>
 					<p>A vehicle can come new from the manufacturer or can be a used vehicle and already listed on AutoTrader.</p>
 					<br>
 					<img src="images/vehicle.png" class="no-img-style">
 				</section>
 
-				<section>
+				<section data-background="#ffffff">
 						<h2>Where does it go next?</h2>
 						<p>The vehicle can be sold straight to the consumer or make its way to a retailer's forecourt.</p>
 				</section>
@@ -165,7 +166,7 @@
 
 					<section>
 					<h3>Squad</h3>
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor I'M WATCHING YOU incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
 					</section>
 
 					<section>
@@ -180,14 +181,13 @@
 
 				</section>
 
-
 			</div>
 
 		</div>
 
 		<script src="lib/js/head.min.js"></script>
 		<script src="js/reveal.js"></script>
-		<script src="js/content-hover.js"></script>
+		<!--<script src="js/content-hover.js"></script>-->
 
 		<script>
 
@@ -200,7 +200,17 @@
 				center: true,
 
 				transition: 'convex', // none/fade/slide/convex/concave/zoom
+				// Parallax background image
+				parallaxBackgroundImage: 'images/testBlobs.png', // e.g. "https://s3.amazonaws.com/hakim-static/reveal-js/reveal-parallax-1.jpg"
 
+				// Parallax background size
+				parallaxBackgroundSize: '2100px 900px', // CSS syntax, e.g. "2100px 900px" - currently only pixels are supported (don't use % or auto)
+
+				// Amount of pixels to move the parallax background per slide step,
+				// a value of 0 disables movement along the given axis
+				// These are optional, if they aren't specified they'll be calculated automatically
+				parallaxBackgroundHorizontal: 200,
+				parallaxBackgroundVertical: 50,
 				// Optional reveal.js plugins
 				dependencies: [
 					{ src: 'lib/js/classList.js', condition: function() { return !document.body.classList; } },
@@ -210,7 +220,19 @@
 					{ src: 'plugin/zoom-js/zoom.js', async: true },
 					{ src: 'plugin/notes/notes.js', async: true }
 				]
+
+
 			});
+
+			Reveal.configure({
+				keyboard: {
+					32: function(){Reveal.toggleOverview();}    //maps SPACEBAR
+					//27: '' //maps ESC
+					//13: '' //maps ENTER
+				}
+			});
+
+			Reveal.toggleOverview(false);
 
 		</script>
 
